[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/fonts/Platinum Sign Over.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/WaveBar/wave_number_container.png" type="Texture" id=2]
[ext_resource path="res://UI/WaveBar/wave_bar_label.png" type="Texture" id=3]
[ext_resource path="res://UI/fonts/Platinum Sign Under.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/WaveBar/WaveBar.gd" type="Script" id=5]
[ext_resource path="res://UI/WaveBar/wave_bar_outline.png" type="Texture" id=6]
[ext_resource path="res://UI/WaveBar/wave_bar_fill.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[node name="WaveHandler" type="HBoxContainer"]
margin_right = 875.0
margin_bottom = 110.0
rect_min_size = Vector2( 875, 110 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 102.0
margin_bottom = 110.0
custom_constants/margin_right = -16
custom_constants/margin_top = 8

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_top = 8.0
margin_right = 118.0
margin_bottom = 110.0

[node name="WaveNumberContainer" type="TextureRect" parent="MarginContainer/CenterContainer"]
margin_right = 118.0
margin_bottom = 102.0
texture = ExtResource( 2 )

[node name="WaveLabelUnder" type="Label" parent="MarginContainer/CenterContainer"]
margin_left = 34.0
margin_top = 22.0
margin_right = 83.0
margin_bottom = 79.0
grow_horizontal = 2
rect_min_size = Vector2( 49, 14 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
uppercase = true

[node name="WaveLabelOver" type="Label" parent="MarginContainer/CenterContainer"]
margin_left = 34.0
margin_top = 22.0
margin_right = 83.0
margin_bottom = 79.0
grow_horizontal = 2
rect_min_size = Vector2( 49, 14 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 106.0
margin_right = 875.0
margin_bottom = 110.0

[node name="WaveBarProgress" type="TextureProgress" parent="VBoxContainer"]
margin_right = 769.0
margin_bottom = 57.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 769.0
margin_bottom = 90.0
custom_constants/margin_top = 8
custom_constants/margin_left = 16

[node name="WaveBarLabel" type="TextureRect" parent="VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 769.0
margin_bottom = 29.0
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]
